[gd_scene load_steps=14 format=3 uid="uid://bmg8m4gc6adp4"]

[ext_resource type="Script" uid="uid://csgi6voxl3lae" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://clfdu3rtnq0cg" path="res://sprites/player_spritesheet.png" id="2_g2els"]
[ext_resource type="Resource" uid="uid://c0nyighp00dqu" path="res://resources/inventory.tres" id="2_qhqgy"]
[ext_resource type="PackedScene" uid="uid://dmvpgvcx5h7mq" path="res://scenes/inventory_ui.tscn" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://d3hguy7tl362w" path="res://sprites/interact_message.png" id="5_qlg0r"]
[ext_resource type="Texture2D" uid="uid://b4akfd2js1ns1" path="res://sprites/inventory_slot.png" id="5_tuyoq"]
[ext_resource type="PackedScene" uid="uid://v6q7qxyilsne" path="res://scenes/tooltip.tscn" id="6_fjrip"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(14, 15)

[sub_resource type="Animation" id="Animation_tuyoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "mining"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smehm"]
_data = {
&"RESET": SubResource("Animation_tuyoq"),
&"idle": SubResource("Animation_fjrip"),
&"mining": SubResource("Animation_smehm")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 5
script = ExtResource("1_3vyb7")
inventory = ExtResource("2_qhqgy")

[node name="PlayerHitbox" type="Area2D" parent="."]
rotation = 0.0020470552

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
shape = SubResource("CircleShape2D_g2els")
debug_color = Color(8.663535e-07, 0.65037256, 0.11417269, 0.41960785)

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_g2els")
hframes = 10
vframes = 10
frame = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_g2els")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -150)

[node name="MiningRaycast" type="RayCast2D" parent="."]
target_position = Vector2(-25, 0)

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0

[node name="MiningDelayTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryUI" parent="CanvasLayer" instance=ExtResource("4_dqkch")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayerHUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/PlayerHUD"]
layout_mode = 1
offset_right = 128.0
offset_bottom = 64.0
texture = ExtResource("5_tuyoq")

[node name="MoneyLabel" type="Label" parent="CanvasLayer/PlayerHUD/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.094000004
anchor_top = 0.187
anchor_right = 0.906
anchor_bottom = 0.81200004
offset_left = -0.06400108
offset_top = 0.063999176
offset_right = 0.06399536
offset_bottom = 0.06399536
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "9999 $"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tooltip" parent="CanvasLayer" instance=ExtResource("6_fjrip")]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 1

[node name="InteractBubble" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(0, -18.888885)
texture = ExtResource("5_qlg0r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_smehm")
}

[connection signal="timeout" from="MiningDelayTimer" to="." method="_on_mining_delay_timer_timeout"]
